--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@
 						<a href="https://www.facebook.com/kentdiether.geraldo" class="mail-link hover-effect"
 						   target="_blank"
 						   rel="noreferrer"
+						   class="hover-effect"
 							>Get in touch with my Facebook →</a
 						>
 					</div>
